@@ -31,7 +31,7 @@ dt {
 <td><a href="#g_clientVersion">g_clientVersion</a></td>
 <td><a href="#g_spoofOptions">g_spoofOptions</a></td>
 <td><a href="#g_panzerLevelUp">g_panzerLevelUp</a></td>
-<td>&nbsp;</td>
+<td><a href="#g_friendlyFireOpts">g_friendlyFireOpts</a></td>
 </tr>
 </table>
 
@@ -2447,6 +2447,8 @@ set via g_reflectFriendlyFire, effectively disabling reflecting damage.</p>
 	<dd>Allow 'grenade boosting' when friendly fire is off
 	<dt>4
 	<dd>Non-engineer players do not trigger landmines on their own team
+	<dt>8
+	<dd>Friendly fire also applies on vehichles (g_friendlyFire 0 will NOT disable this)
 	</dl>
 <p>Default is 0</p>
 
